# kaptilo

./: .dockerignore  .env.dev  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  test.py
apps/api/: authentications.py  base_test.py  urls.py  views.py
apps/api/link/: permissions.py  serializers.py  urls.py  views.py
apps/api/link/managment/commands/: run_bot.py
apps/common/management/commands/: create_super_user.py
apps/core/: models.py  urls.py  views.py
apps/core/migrations/: 0002_link_header.py  0004_auto_20210320_1540.py  0008_link_created.py
apps/core/templates/: profile.html
apps/link/: admin.py  apps.py  models.py  tasks.py
apps/link/migrations/: 0001_initial.py  0003_auto_20210320_1535.py  0005_auto_20210320_1810.py  0006_auto_20210320_1812.py  0009_remove_link_permanent.py
kaptilo/: manage.py
kaptilo/core/: admin.py  forms.py  models.py  urls.py  views.py
kaptilo/core/migrations/: 0001_initial.py  0007_auto_20210320_1813.py
kaptilo/core/static/css/: main.css
kaptilo/core/templates/: base.html  create_link.html  homepage.html  login.html  profile.html  register.html
kaptilo/kaptilo/: asgi.py  settings.py  urls.py  wsgi.py
project/: middlewares.py  settings.py  urls.py  wsgi.py
project/templates/: create_link.html  field.html  show_link.html
